--- a/style.css
+++ b/style.css
@@ -1,138 +1,82 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
 
 :root {
-  /* Colors Primary */
-  --color-light-cyan: hsl(193, 38%, 86%);
-  --color-neon-green: hsl(150, 100%, 66%);
-  --color-neon-green-hover: hsla(150, 100%, 66%, 0.4);
-
-  /* Colors Neutral */
-  --color-dark-grayish-blue: hsl(217, 19%, 24%);
-  --color-grayish-blue: hsl(217, 19%, 38%);
-  --color-dark-blue: hsl(218, 23%, 16%);
-
-  /* Fonts */
-  --font-size-header: 1.4rem;
-  --font-size-regular: 2.8rem;
-  --font-weight-regular: 800;
-
-  /* Shadows */
-  --shadow-common: 0 0 4px 8px rgb(23, 27, 34, 0.1);
+    --Light-Cyan: hsl(193, 38%, 86%);
+    --Neon-Green: hsl(150, 100%, 66%);
+    --Grayish-Blue: hsl(216, 19%, 38%);
+    --Dark-Grayish-Blue: hsl(219, 19%, 24%);
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-  font: inherit;
-  margin: 0;
-  padding: 0;
-  border: 0;
+* {
+    margin: 0;
+    padding: 0;
+    font: inherit;
+    box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
+html,
+body {
+    height: 100vh;
+    display: grid;
+    grid-template-rows: auto 0px;
 }
 
 body {
-  background: var(--color-dark-blue);
-  font-family: "Manrope", sans-serif;
-  box-sizing: border-box;
+    font-family: "Manrope", sans-serif;
+    background-color: rgba(13, 12, 14, 0.95);
 }
 
 main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding: 30px 50px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: var(--Dark-Grayish-Blue);
+    max-width: 550px;
+    width: fit-content;
+    height: fit-content;
+    margin: auto 20px;
 }
 
-.advice-component {
-  box-shadow: var(--shadow-common);
-  background: var(--color-dark-grayish-blue);
-  height: fit-content;
-  border-radius: 1.5rem;
-  width: 100%;
-  min-width: 34.5rem;
-  max-width: 54rem;
-  margin: 0 1.5rem;
-  text-align: center;
-  position: relative;
-  padding-top: 5rem;
-  margin-top: -3.5rem;
+.advice-id {
+    color: var(--Neon-Green);
+    text-transform: uppercase;
+    word-spacing: 10px;
 }
 
-.advice-component .header {
-  text-transform: uppercase;
-  font-size: var(--font-size-header);
-  color: var(--color-neon-green);
-  margin-bottom: 2.25rem;
-  letter-spacing: 3.5px;
+.advice-text {
+    color: var(--Light-Cyan);
+    margin: 20px auto 0;
+    font-size: 28px;
+    width: 100%;
 }
 
-.advice-component .advice-paragraph {
-  font-weight: var(--font-weight-regular);
-  font-size: var(--font-size-regular);
-  color: var(--color-light-cyan);
-  padding: 0 4.6rem;
-  margin-bottom: 3.75rem;
+.divider {
+    width: 100%;
+    margin: 20px 0 30px;
+    background-size: 100% 100%;
 }
 
-.advice-component .divider {
-  margin-bottom: 7rem;
+#dice {
+    background-color: var(--Neon-Green);
+    cursor: pointer;
+    border: 0;
+    border-radius: 50%;
+    margin: 0 auto -50px;
+    padding: 15px 16px 12px;
 }
 
-.advice-component .divider .desktop-divider {
-  display: inline-block;
+#dice img {
+    width: 23px;
 }
 
-.advice-component .divider .mobile-divider {
-  display: none;
+#dice:hover {
+    box-shadow: 0 0 40px var(--Neon-Green);
 }
 
-.advice-component .advice-generator {
-  background: var(--color-neon-green);
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 50%);
-  width: 6.5rem;
-  aspect-ratio: 1 / 1;
-  border-radius: 50%;
-  display: grid;
-  place-items: center;
-  cursor: pointer;
-}
-
-.advice-component .advice-generator:hover {
-  box-shadow: 0 0 2.5rem 1rem var(--color-neon-green-hover);
-}
-
-@media (max-width: 570px) {
-  :root {
-    --font-size-regular: 2.4rem;
-    --font-size-header: 1.1rem;
-  }
-
-  .advice-component {
-    padding-top: 4.5rem;
-  }
-
-  .advice-component .advice-paragraph {
-    margin-bottom: 3rem;
-    padding: 0 1.25rem;
-  }
-
-  .advice-component .divider {
-    margin-bottom: 6rem;
-    padding-bottom: 2rem;
-  }
-
-  .advice-component .divider .desktop-divider {
-    display: none;
-  }
-
-  .advice-component .divider .mobile-divider {
-    display: inline-block;
-  }
+@media (min-width: 530px) {
+    main {
+        margin: auto;
+    }
 }
